project-vision/deployments/gcp-ingress.yaml
# for local use instlal default nginx ingress first
# on kind: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/master/deploy/static/provider/kind/deploy.yaml
# on docker for desktop: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v0.34.1/deploy/static/provider/cloud/deploy.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api/*
            backend:
              serviceName: letsboot-backend
              servicePort: 80
          - path: /*
            backend:
              serviceName: letsboot-frontend
              servicePort: 80
